--- a/index.html
+++ b/index.html
@@ -24,48 +24,7 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <div class="container">
-      <div class="header container__row">
-        <div class="header__inner">
-          <div class="brand">
-            <h1 class="brand__logo"><a href="./">Directree</a></h1>
-            <h2 class="brand__text">インデントテキストをツリー状に変換</h2>
-          </div>
-          <ul class="shares">
-            <li class="shares__item--twitter"><a href="http://twitter.com/intent/tweet?text=undefined&amp;url=undefined" onclick="window.open(encodeURI(decodeURI(this.href)), 'tweetwindow', 'width=550, height=450, personalbar=0, toolbar=0, scrollbars=1, resizable=1' ); return false;" target="_blank" class="shares__link"><i class="fa fa-twitter"></i></a>
-              <div class="shares__popup">Tweet!</div>
-            </li>
-            <li class="shares__item--facebook"><a href="http://www.facebook.com/share.php?u=undefined" onclick="window.open(this.href, 'facebookwindow', 'width=550, height=450,personalbar=0,toolbar=0,scrollbars=1,resizable=1'); return false;" class="shares__link"><i class="fa fa-facebook"></i></a>
-              <div class="shares__popup">Share!</div>
-            </li>
-            <li class="shares__item--hatena"><a href="http://b.hatena.ne.jp/add?mode=confirm&amp;url=undefined&amp;title=undefined" onclick="window.open(this.href, 'hatenawindow', 'width=500, height=450, menubar=no, toolbar=no, scrollbars=yes'); return false;" class="shares__link"><i class="icon-hatena"></i></a>
-              <div class="shares__popup">Bookmark!</div>
-            </li>
-            <li class="shares__item--pocket"><a href="http://getpocket.com/edit?url=undefined&amp;title=undefined" onclick="window.open(this.href, 'pocketwindow', 'width=550, height=350, menubar=no, toolbar=no, scrollbars=yes'); return false;" class="shares__link"><i class="fa fa-get-pocket"></i></a>
-              <div class="shares__popup">Save!</div>
-            </li>
-            <li class="shares__item--github"><a href="https://github.com/tsuyoshiwada/directree" class="shares__link"><i class="fa fa-github"></i></a>
-              <div class="shares__popup">Source on GitHub </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="editor-titles container__row">
-        <h3 class="editor-title--input container__col">Input</h3>
-        <h3 class="editor-title--output container__col">Output</h3>
-      </div>
-      <div class="editors container__row">
-        <div id="input-editor" class="editor--input container__col"></div>
-        <div id="output-editor" class="editor--output container__col"></div>
-      </div>
-      <p class="copyright">Copyright Directree &copy; All Right Reserved.</p>
-    </div>
-    <div class="drop-info">
-      <div class="drop-info__body">
-        <h3 class="drop-info__title">Drop me!</h3>
-        <p class="drop-info__text">Supports single directory.</p>
-      </div>
-    </div>
+    <div id="app"></div>
     <script type="text/javascript" src="./js/app.bundle.js"></script>
   </body>
 </html>
